2025-03-03 (d3c654e): test for macos build
2025-03-03 (ff8afbc): test for macos build
2025-03-03 (3cf168f): test for macos arm64 build
2025-03-03 (2395866): test for macos arm64 build
2025-03-03 (121858a): i18n update
2025-03-03 (72b41d6): i18n update
2025-03-03 (7e384e4): Merge branch 'spacejoey86-greater_math_modes'
2025-03-03 (7fd84d8): Merge branch 'greater_math_modes' of https://github.com/spacejoey86/OpenHantek6022 into spacejoey86-greater_math_modes
2025-03-03 (37cc223): fix #416 - install debian package instruction
2025-03-03 (9508003): cleanup runner script
2025-03-03 (8ce1e82): cleanup macos build, fix more warnings
2025-03-03 (764dfc9): fix macos warning
2025-03-03 (a399b92): update gizHub runner macos version
2025-03-03 (3190b80): fix #419 - allow MATH scaling 20 mV .. 1000 V
2025-03-02 (799cd67): replace deprecated upload-artifact@v3 with upload-artifact@v4
2025-03-02 (68221da): fix #420 - remenber save as path for screenshots etc.
2024-11-27 (e365b41): remove incorrect comment
2024-11-27 (21c413c): update manual and fixes
2024-11-27 (2a9f0c9): added greater than math modes
2024-03-24 (ffd1691): README: add hint for possible graphics issue solution for win systems
2024-03-24 (d0f44f8): Fix voltageScale to correct indices for ISDS205b
2024-03-24 (09d0e28): Merge branch 'isds205b/channelCalFix' of https://github.com/wakass/OpenHantek6022 into wakass-isds205b/channelCalFix
2024-03-24 (a207f5f): Fix voltageScale to correct indices
2024-03-15 (b9d6560): README update, add solution Crostini graphics issue; build info update
2024-03-12 (29dbcca): README update
2024-03-05 (9c1e9e8): fix #399 - update macos build instructions, hack nedded no more
2024-02-24 (3ac5c3a): fw refactoring - no functional change
2024-02-23 (ad43d3b): Merge branch 'wakass-main' - Instrustar 205X support #394
2024-02-23 (5531981): small fw update - functional change
2024-02-19 (b8fb40b): Instrustar 205X support (PR #394)